Lightbox on mobile update fix arrows

--- a/assets/sass/partials/design/pages/_gallery.scss
+++ b/assets/sass/partials/design/pages/_gallery.scss
@@ -45,16 +45,10 @@
 }
 
 .gallery-title {
-    //position: absolute;
     z-index: 1;
-    //width: 100%;
     padding: 1em 2em;
     top: 0;
     margin: 0;
-    //color: #fff;
-    // background: -moz-linear-gradient(to top, rgba(0, 0, 0, 0.27) 0%, rgba(0, 0, 0, 0.94) 100%);
-    // background: -webkit-linear-gradient(to top, rgba(0, 0, 0, 0.27) 0%, rgba(0, 0, 0, 0.94) 100%);
-    // background: linear-gradient(to top, rgba(0, 0, 0, 0.27) 0%, rgba(0, 0, 0, 0.94) 100%);
     background: #fff;
 }
 
@@ -130,4 +124,42 @@
     ul {
         margin-top: 0;
     }
+}
+
+.featherlight {
+  background: rgba(29, 29, 29, 0.91);
+}
+.featherlight .featherlight-content {
+  .featherlight-next {
+    background: rgba(0, 0, 0, 0.25);
+    width: 75px;
+    transition: all .25s linear;
+    @include breakpoint($bp-medium, $no-query: '.no-mq') {
+    right: 24px;
+    top: 25px;
+    }
+    &:hover {
+      background: rgba(0, 0, 0, 0.5);
+    }
+    span {
+    display: block;
+    text-shadow: none;
+    }
+  }
+  .featherlight-previous {
+    background: rgba(0, 0, 0, 0.25);
+    width: 75px;
+    transition: all .25s linear;
+    @include breakpoint($bp-medium, $no-query: '.no-mq') {
+      left: 24px;
+      top: 25px;
+    }
+     &:hover {
+      background: rgba(0, 0, 0, 0.5);
+    }
+    span {
+    display: block;
+    text-shadow: none;
+    }
+  }
 }
