--- a/assets/sass/partials/styleguide/forms/_buttons.scss
+++ b/assets/sass/partials/styleguide/forms/_buttons.scss
@@ -14,5 +14,6 @@ input[type="submit"] {
   border-radius: 2px;
   padding: 0.75em 1.5em;
   margin-top: 1em;
+  -webkit-appearance: none;
 
 }
